simple-app/03-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.k3d.localhost`)
      kind: Rule
      services:
        - name: nginx-svc
          kind: Service
          port: 80
  tls: {}
